WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
107595
[WK2] WebProcessService is not terminated when page is closed
https://bugs.webkit.org/show_bug.cgi?id=107595
Summary
[WK2] WebProcessService is not terminated when page is closed
Alexey Proskuryakov
Reported
2013-01-22 15:32:33 PST
<
rdar://problem/13048210
>
Attachments
proposed fix
(1.71 KB, patch)
2013-01-22 15:35 PST
,
Alexey Proskuryakov
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2013-01-22 15:35:08 PST
Created
attachment 184060
[details]
proposed fix
Alexey Proskuryakov
Comment 2
2013-01-22 15:38:34 PST
Committed <
http://trac.webkit.org/changeset/140481
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug