        [WK2] WebProcessService is not terminated when page is closed         https://bugs.webkit.org/show_bug.cgi?id=107595

Reviewed by Anders Carlsson.

        * platform/mac/RunLoopMac.mm: (WebCore::RunLoop::stop): Allow stopping XPC service
        run loop. Also, harmonized NSApp vs. [NSApplication sharedApplication] usage.



Canonical link: https://commits.webkit.org/125826@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140481 268f45cc-cd09-0410-ab3c-d52691b4dbfc