Source/WebCore/platform/mac/RunLoopMac.mm
@@ -52,9 +52,11 @@ void RunLoop::run()
 void RunLoop::stop()
 {
     ASSERT(m_runLoop == CFRunLoopGetCurrent());
-    
-    if (m_runLoop == main()->m_runLoop && m_nestingLevel == 1 && s_useApplicationRunLoopOnMainRunLoop) {
-        [[NSApplication sharedApplication] stop:nil];
+
+    // Nesting level can be 0 if the run loop is started externally (such as the case for XPC services).
+    if (m_runLoop == main()->m_runLoop && m_nestingLevel <= 1 && s_useApplicationRunLoopOnMainRunLoop) {
+        ASSERT([NSApp isRunning]);
+        [NSApp stop:nil];
         NSEvent *event = [NSEvent otherEventWithType:NSApplicationDefined
                                             location:NSMakePoint(0, 0)
                                        modifierFlags:0
